# coding_crew_python

./: README.md  pyproject.toml
src/coding_crew_python/: crew.py  main.py
src/coding_crew_python/config/: agents.yaml  config.py  tasks.yaml
src/coding_crew_python/tools/: codebase_tools.py  custom_tool.py
